# ONSdigital.survey-assist-utils

./: .env.template  .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.toml  orchestrator.txt  pyproject.toml  pytest.ini
containers/batch/: DOCKERFILE
data/artificial_data/: fake_responses.csv  fake_responses_metadata.txt  unit_test_all.csv  unit_test_confidence.csv  unit_test_coverage.csv  unit_test_digits_accuracy.csv  unit_test_heat_map.csv  unit_test_label_accuracy.csv  unit_test_not_first_choice.csv
docs/: guide.md
notebooks/: 2025-10_semantic_vis.py  2025_09_metrics_vis.py  SAvsCC.py  analysis_eval_data.py  config.toml  data_cleaner.py  debug.py  evaluation_metrics_script.py  evaluation_script.py  example_coder_alignment.py  new_e2e.py  prepare_config.toml  run_json_processor.py
review_app/: sic_review_gui.py  sic_review_marimo.py  sic_review_tool.py
review_app/layouts/: sic_review_marimo.grid.json
review_app/two_prompt_outputs/: Peter_30_for_manual_review_v2.parquet  STG5.parquet  STG5_ambig_Peter.parquet  STG5_ambig_Peter_done.parquet  STG5_unambig90.parquet  STG5_unambig90_initial_and_clerical_match.parquet
scripts/: README.md  eval_metrics_original_prompt.py  evaluation_config.toml  evaluation_metrics.md  example_data_cleaner.py  get_evaluation_metrics.py  metrics_runner.py  one_prompt_evaluation.py  one_prompt_evaluation_revised.py  prepare_evaluation_data_for_analysis.py  process_local_run.py  process_tlfs_evaluation_data.py  two_prompt_evaluation_revised.py
scripts/PfR_distribution/: README.md  post_process_otps.py
scripts/data_egress/: retrieve_survey_responses.py
scripts/synthetic_responses/: POC_predict_demographic_info.py  POC_synthetic_follow_up_response.py  example_predict_demographic_info.py  example_synthetic_follow_up_response.py
scripts/volume_testing/: __init__.py  export_to_BQ.py  export_to_bq.py  volume_test.py
src/survey_assist_utils/: tmp_coder_alignment.py
src/survey_assist_utils/api_token/: jwt_utils.py
src/survey_assist_utils/cloud_store/: gcs_utils.py
src/survey_assist_utils/configs/: column_config.py
src/survey_assist_utils/data_cleaning/: data_cleaner.py  prep_data.py  sic_code_section_list.py  sic_codes.py
src/survey_assist_utils/evaluation/: README.md  code_comparison.py  coder_alignment.py  metric_calculator.py  metrics.py  preprocessor.py
src/survey_assist_utils/general_utils/: sankey_diagram.py
src/survey_assist_utils/logging/: logging_utils.py
src/survey_assist_utils/processing/: flag_generator.py  json_processor.py
src/survey_assist_utils/synthetic_responses/: README.md  __init__.py  data_access.py  prompts.py  (+3 more)
tests/: conftest.py  test_coder_alignment.py  test_column_config.py  test_data_cleaner.py  test_preprocess.py  test_preprocessor.py  test_process_json.py  test_synthetic_response_utils.py  test_utils.py
tests/data_cleaning/: test_prep_data.py  test_sic_code_section_list.py  test_sic_codes.py
tests/evaluation/: test_code_comparison.py  test_metrics.py
